# HomeWork10-2-

./: CMakeLists.txt  Equilateral_triangle.h  Figure.h  Isosceles_triangle.h  Parallelogram.h  Quadrangle.h  Rectangle.h  Rhomb.h  Source.cpp  Square.h  Triangle.h  classEquilateral_triangle.cpp  classFigure.cpp  classIsosceles_triangle.cpp  classParallelogram.cpp  classQuadrangle.cpp  classRectangle.cpp  classRectangular_triangle.cpp  classRhomb.cpp  classSquare.cpp  classTriangle.cpp
