
cmake_minimum_required(VERSION 3.22.0)

project(cmake_harder)
add_executable(programm_figure Source.cpp classEquilateral_triangle.cpp classIsosceles_triangle.cpp classRectangle.cpp classFigure.cpp classParallelogram.cpp classTriangle.cpp
classQuadrangle.cpp classRectangular_triangle.cpp classRhomb.cpp classSquare.cpp classTriangle.cpp)